--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="./src/assets/photos/math-icon2.png" />
+    <link rel="icon" href="./src/assets/photos/Simcoe Math browser Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simcoe Math</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
-</body>
-
+  </body>
 </html>
